--- a/src/browser_action.html
+++ b/src/browser_action.html
@@ -8,8 +8,10 @@
 </html>
 <body>
 <div class="container-fluid">
-  <ul class="list-group">
-  </ul>
+  <table class="table">
+    <tbody id="registerList">
+    </tbody>
+  </table>
 </div>
 </body>
 <script type="text/javascript" src="browser_action.js"></script>
