--- a/src/option.html
+++ b/src/option.html
@@ -3,6 +3,7 @@
   <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <meta charset="utf-8"/>
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 </html>
 <body>
@@ -20,7 +21,7 @@
         <textarea class="form-control" name="js" rows="3"></textarea>
       </div>
       <div class="float-right">
-        <button type="button" class="btn btn-primary submit pull-right">登録</button>
+        <button type="button" class="btn btn-primary submit pull-right" id="submit">登録</button>
       </div>
     </div>
 
@@ -40,6 +41,34 @@
       </table>
     </div>
   </div>
+</div>
+
+<div id="modalList">
+  <!--<div class="modal fade" id="modal1" tabindex="-1"-->
+       <!--role="dialog" aria-labelledby="label1" aria-hidden="true">-->
+    <!--<div class="modal-dialog" role="document">-->
+      <!--<div class="modal-content">-->
+        <!--<div class="modal-header">-->
+          <!--<h5 class="modal-title" id="label1">編集</h5>-->
+          <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+            <!--<span aria-hidden="true">&times;</span>-->
+          <!--</button>-->
+        <!--</div>-->
+        <!--<div class="modal-body">-->
+          <!--<div class="form-group">-->
+            <!--<label>Title</label>-->
+            <!--<input class="form-control" name="title" value="titleValue"/>-->
+            <!--<label>JavaScript</label>-->
+            <!--<textarea class="form-control" name="js" rows="3"></textarea>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="modal-footer">-->
+          <!--<button type="button" class="btn btn-danger" data-dismiss="modal">削除</button>-->
+          <!--<button type="button" class="btn btn-primary">更新</button>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
 
 </body>
