内部リファクタリング

--- a/src/option.html
+++ b/src/option.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="col-12">
-      <h3>登録済みjavascript</h3>
+      <h3>登録済みjavascriptを編集</h3>
       <table class="table">
         <thead>
         <tr>
